# quadricslam

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yaml
examples/hello_manual_quadricslam/: run
examples/hello_quadricslam/: install  run
examples/realsense_python/: run
examples/tum_rgbd_dataset/: install  run
hello_quadricslam/: run
hello_world/: run
src/quadricslam/: __init__.py  quadricslam.py  quadricslam_states.py  utils.py  visualisation.py
src/quadricslam/data_associator/: __init__.py  quadric_iou_associator.py
src/quadricslam/data_source/: __init__.py  get_tum_rgbd_datasets  realsense.py  tum_rgbd.py
src/quadricslam/detector/: __init__.py  faster_rcnn.py
src/quadricslam/interfaces/: data_associator.py  data_source.py  dataset.py  datasource.py  detector.py  visual_odometry.py
src/quadricslam/visual_odometry/: __init__.py  create_kimera_vio_ros_ws  rgbd_cv2.py
src/quadricslam_examples/: __main__.py  create_ros_ws  hello_manual_quadricslam.py  hello_quadricslam.py  realsense_python.py  realsense_ros.py  tum_rgbd.py  tum_rgbd_dataset.py  tum_rgbd_dataset_get
src/quadricslam_examples/realsense_ros/: CMakeLists.txt  package.xml
src/quadricslam_examples/realsense_ros/launch/: kimera_vio.launch  quadricslam.launch  realsense.launch  realsense_ros.launch
src/quadricslam_examples/realsense_ros/nodes/: quadricslam
